Pequeño fallo arreglado