@@ -9,6 +9,8 @@ import com.example.special_reads_t.Service.RecommendationService;
 import com.example.special_reads_t.Service.StatisticsService;
 import com.example.special_reads_t.Service.UserService;
 import com.example.special_reads_t.Service.WishListService;
+import com.fasterxml.jackson.annotation.JsonInclude;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -39,9 +41,6 @@ public class IndexUserRestController {
     @Autowired
     private StatisticsService statisticsService;
 
-    /**
-     * Obtiene datos del dashboard de usuario autenticado.
-     */
     @GetMapping
     public ResponseEntity<IndexUserResponse> getIndexData(HttpServletRequest request) {
         User user = userService.getCurrentUser();
@@ -51,29 +50,32 @@ public class IndexUserRestController {
 
         boolean isAdmin = request.isUserInRole("ADMIN");
 
-        // Recomendaciones y listados
-        List<Review> recs = recommendationService.getRecommendationsFor(user, 8);
-        List<JournalEntry> readingEntries = journalService.getReadingEntriesForUser(user);
-        List<WishList> wishlistEntries = wishListService.getWishListFor(user);
+        List<Review> rawRecs = recommendationService.getRecommendationsFor(user, 8);
+        List<ReviewDto> recs = rawRecs.stream()
+                .map(r -> new ReviewDto(
+                        r.getReviewText(),
+                        r.isRecommend(),
+                        r.getBook() != null ? r.getBook().getId() : null,
+                        r.getBook() != null ? r.getBook().getTitle() : null
+                )).toList();
 
-        // Estadísticas
-        long totRead = statisticsService.totalBooks(user);
-        long totFriends = statisticsService.totalFriends(user);
-        long totChallenges = statisticsService.completedChallenges(user);
-        long totPages = statisticsService.totalPages(user);
-
-        // Eventos de lectura y ordenación: usa getStatus() para diferenciar los estados
         List<JournalEntry> reading = journalService.getReadingEntriesForUser(user);
         List<JournalEntry> finished = journalService.getFinishedEntriesForUser(user);
         List<JournalEntry> combined = new ArrayList<>(reading);
         combined.addAll(finished);
-        List<JournalEntry> lastEvents = combined.stream()
+
+        List<JournalEntryDto> readingEntries = reading.stream().map(JournalEntryDto::from).toList();
+        List<JournalEntryDto> lastEvents = combined.stream()
                 .sorted(Comparator.comparing(
                         (JournalEntry entry) -> entry.getStatus() != null && entry.getStatus().equalsIgnoreCase("Leyendo")
                                 ? entry.getStartDate() : entry.getFinishDate()
                 ).reversed())
                 .limit(7)
-                .collect(Collectors.toList());
+                .map(JournalEntryDto::from)
+                .toList();
+
+        List<WishListDto> wishlistEntries = wishListService.getWishListFor(user)
+                .stream().map(WishListDto::from).toList();
 
         IndexUserResponse response = new IndexUserResponse(
                 user.getUsername(),
@@ -81,19 +83,16 @@ public class IndexUserRestController {
                 recs,
                 readingEntries,
                 wishlistEntries,
-                totRead,
-                totFriends,
-                totChallenges,
-                totPages,
+                statisticsService.totalBooks(user),
+                statisticsService.totalFriends(user),
+                statisticsService.completedChallenges(user),
+                statisticsService.totalPages(user),
                 lastEvents
         );
 
         return ResponseEntity.ok(response);
     }
 
-    /**
-     * Añade un libro a la wishlist del usuario.
-     */
     @PostMapping("/wishlist/add")
     public ResponseEntity<Void> addToWishlist(@RequestParam("bookId") Long bookId) {
         User user = userService.getCurrentUser();
@@ -104,9 +103,6 @@ public class IndexUserRestController {
         return ResponseEntity.ok().build();
     }
 
-    /**
-     * Elimina un libro de la wishlist del usuario.
-     */
     @PostMapping("/wishlist/remove")
     public ResponseEntity<Void> removeFromWishlist(@RequestParam("bookId") Long bookId) {
         User user = userService.getCurrentUser();
@@ -117,31 +113,21 @@ public class IndexUserRestController {
         return ResponseEntity.ok().build();
     }
 
-    /**
-     * DTO de respuesta para el endpoint /api/indexUser
-     */
     public static class IndexUserResponse {
         private String username;
         private boolean admin;
-        private List<Review> recs;
-        private List<JournalEntry> readingEntries;
-        private List<WishList> wishlistEntries;
+        private List<ReviewDto> recs;
+        private List<JournalEntryDto> readingEntries;
+        private List<WishListDto> wishlistEntries;
         private long totRead;
         private long totFriends;
         private long totChallenges;
         private long totPages;
-        private List<JournalEntry> lastEvents;
+        private List<JournalEntryDto> lastEvents;
 
-        public IndexUserResponse(String username,
-                                 boolean admin,
-                                 List<Review> recs,
-                                 List<JournalEntry> readingEntries,
-                                 List<WishList> wishlistEntries,
-                                 long totRead,
-                                 long totFriends,
-                                 long totChallenges,
-                                 long totPages,
-                                 List<JournalEntry> lastEvents) {
+        public IndexUserResponse(String username, boolean admin, List<ReviewDto> recs, List<JournalEntryDto> readingEntries,
+                                 List<WishListDto> wishlistEntries, long totRead, long totFriends,
+                                 long totChallenges, long totPages, List<JournalEntryDto> lastEvents) {
             this.username = username;
             this.admin = admin;
             this.recs = recs;
@@ -154,84 +140,80 @@ public class IndexUserRestController {
             this.lastEvents = lastEvents;
         }
 
-        public String getUsername() {
-            return username;
+        public String getUsername() { return username; }
+        public boolean isAdmin() { return admin; }
+        public List<ReviewDto> getRecs() { return recs; }
+        public List<JournalEntryDto> getReadingEntries() { return readingEntries; }
+        public List<WishListDto> getWishlistEntries() { return wishlistEntries; }
+        public long getTotRead() { return totRead; }
+        public long getTotFriends() { return totFriends; }
+        public long getTotChallenges() { return totChallenges; }
+        public long getTotPages() { return totPages; }
+        public List<JournalEntryDto> getLastEvents() { return lastEvents; }
+    }
+
+    @JsonInclude(JsonInclude.Include.NON_NULL)
+    public static class ReviewDto {
+        private String reviewText;
+        private boolean recommend;
+        private Long bookId;
+        private String bookTitle;
+
+        public ReviewDto(String reviewText, boolean recommend, Long bookId, String bookTitle) {
+            this.reviewText = reviewText;
+            this.recommend = recommend;
+            this.bookId = bookId;
+            this.bookTitle = bookTitle;
         }
 
-        public void setUsername(String username) {
-            this.username = username;
+        public String getReviewText() { return reviewText; }
+        public boolean isRecommend() { return recommend; }
+        public Long getBookId() { return bookId; }
+        public String getBookTitle() { return bookTitle; }
+    }
+
+    @JsonInclude(JsonInclude.Include.NON_NULL)
+    public static class JournalEntryDto {
+        private String status;
+        private String startDate;
+        private String finishDate;
+        private Long bookId;
+        private String bookTitle;
+
+        public static JournalEntryDto from(JournalEntry entry) {
+            JournalEntryDto dto = new JournalEntryDto();
+            dto.status = entry.getStatus();
+            dto.startDate = entry.getStartDate() != null ? entry.getStartDate().toString() : null;
+            dto.finishDate = entry.getFinishDate() != null ? entry.getFinishDate().toString() : null;
+            if (entry.getBook() != null) {
+                dto.bookId = entry.getBook().getId();
+                dto.bookTitle = entry.getBook().getTitle();
+            }
+            return dto;
         }
 
-        public boolean isAdmin() {
-            return admin;
+        public String getStatus() { return status; }
+        public String getStartDate() { return startDate; }
+        public String getFinishDate() { return finishDate; }
+        public Long getBookId() { return bookId; }
+        public String getBookTitle() { return bookTitle; }
+    }
+
+    @JsonInclude(JsonInclude.Include.NON_NULL)
+    public static class WishListDto {
+        private Long bookId;
+        private String bookTitle;
+
+        public static WishListDto from(WishList entry) {
+            WishListDto dto = new WishListDto();
+            if (entry.getBook() != null) {
+                dto.bookId = entry.getBook().getId();
+                dto.bookTitle = entry.getBook().getTitle();
+            }
+            return dto;
         }
 
-        public void setAdmin(boolean admin) {
-            this.admin = admin;
-        }
-
-        public List<Review> getRecs() {
-            return recs;
-        }
-
-        public void setRecs(List<Review> recs) {
-            this.recs = recs;
-        }
-
-        public List<JournalEntry> getReadingEntries() {
-            return readingEntries;
-        }
-
-        public void setReadingEntries(List<JournalEntry> readingEntries) {
-            this.readingEntries = readingEntries;
-        }
-
-        public List<WishList> getWishlistEntries() {
-            return wishlistEntries;
-        }
-
-        public void setWishlistEntries(List<WishList> wishlistEntries) {
-            this.wishlistEntries = wishlistEntries;
-        }
-
-        public long getTotRead() {
-            return totRead;
-        }
-
-        public void setTotRead(long totRead) {
-            this.totRead = totRead;
-        }
-
-        public long getTotFriends() {
-            return totFriends;
-        }
-
-        public void setTotFriends(long totFriends) {
-            this.totFriends = totFriends;
-        }
-
-        public long getTotChallenges() {
-            return totChallenges;
-        }
-
-        public void setTotChallenges(long totChallenges) {
-            this.totChallenges = totChallenges;
-        }
-
-        public long getTotPages() {
-            return totPages;
-        }
-
-        public void setTotPages(long totPages) {
-            this.totPages = totPages;
-        }
-
-        public List<JournalEntry> getLastEvents() {
-            return lastEvents;
-        }
-
-        public void setLastEvents(List<JournalEntry> lastEvents) {
-            this.lastEvents = lastEvents;
-        }
+        public Long getBookId() { return bookId; }
+        public String getBookTitle() { return bookTitle; }
     }
 }
