@@ -22,24 +22,47 @@ public class RecommendationService {
     public List<Review> getRecommendationsFor(User user, int max) {
         List<String> favGenres = reviewRepo.findAllByUserAndRecommendTrue(user).stream()
                 .flatMap(r -> r.getBook().getGenres().stream())
+                .map(g -> g.toLowerCase().trim()) // normaliza géneros
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
 
-        List<Review> recommendations;
+        List<Review> candidates = reviewRepo.findAllByRecommendTrueAndUserNot(user);
 
-        if (!favGenres.isEmpty()) {
-            recommendations = reviewRepo.findAllByRecommendTrueAndUserNot(user).stream()
-                    .filter(r -> r.getBook().getGenres().stream().anyMatch(favGenres::contains))
+        System.out.println("Total posibles recomendaciones: " + candidates.size());
+        System.out.println("Géneros favoritos: " + favGenres);
+
+        List<Review> recommendations = candidates.stream()
+                .peek(r -> {
+                    List<String> bookGenres = r.getBook().getGenres().stream()
+                            .map(g -> g.toLowerCase().trim())
+                            .toList();
+                    boolean sameGenre = bookGenres.stream().anyMatch(favGenres::contains);
+                    boolean notRead = !journalRepo.existsByUserAndBook(user, r.getBook());
+                    if (sameGenre && notRead) {
+                        System.out.println("✅ Recomendado: " + r.getBook().getTitle());
+                    } else {
+                        System.out.println("❌ Descartado: " + r.getBook().getTitle() +
+                                " | Género coincide: " + sameGenre +
+                                " | Ya leído: " + !notRead);
+                    }
+                })
+                .filter(r -> r.getBook().getGenres().stream()
+                        .map(g -> g.toLowerCase().trim())
+                        .anyMatch(favGenres::contains))
+                .filter(r -> !journalRepo.existsByUserAndBook(user, r.getBook()))
+                .limit(max)
+                .toList();
+
+        if (recommendations.isEmpty()) {
+            // Fallback: por mejor puntuación
+            recommendations = candidates.stream()
                     .filter(r -> !journalRepo.existsByUserAndBook(user, r.getBook()))
+                    .sorted((a, b) -> Double.compare(
+                            b.getDecimalRating().doubleValue(),
+                            a.getDecimalRating().doubleValue()))
                     .limit(max)
                     .toList();
-        } else {
-            // Si no hay géneros favoritos, recomendar por mejor puntuación
-            recommendations = reviewRepo.findAllByRecommendTrueAndUserNot(user).stream()
-                    .filter(r -> !journalRepo.existsByUserAndBook(user, r.getBook()))
-                    .sorted((a, b) -> Double.compare(b.getDecimalRating().doubleValue(), a.getDecimalRating().doubleValue()))
-                    .limit(max)
-                    .toList();
+            System.out.println("↪️ Usando fallback por puntuación");
         }
 
         return recommendations;
